<resources>
    <string name="app_name">SIT317MobileAPP</string>
    <string name="message">Message</string>
    <string name="Email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="location">Location</string>
    <string name="symptoms">Symptoms</string>
</resources>